[gd_scene format=3 uid="uid://bjxs66i1td0k6"]

[ext_resource type="Script" uid="uid://6c240qqy87r6" path="res://addons/renegade_npc/core/realized_npc.gd" id="1_realized"]
[ext_resource type="Script" uid="uid://743lm2tidp30" path="res://addons/renegade_npc/examples/npc_trajectory_line.gd" id="2_trajectory"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.3
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_interact"]
radius = 2.5

[sub_resource type="SphereShape3D" id="SphereShape3D_detect"]
radius = 15.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_debug"]
albedo_color = Color(0.7, 0.7, 0.7, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_debug"]
radius = 0.3
height = 1.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tv1nl"]
transparency = 1
cull_mode = 2
no_depth_test = true
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0, 0.6)

[sub_resource type="ImmediateMesh" id="ImmediateMesh_4l61g"]

[node name="RealizedNPC" type="CharacterBody3D" unique_id=1045757955 groups=["npc"]]
collision_layer = 2
script = ExtResource("1_realized")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1041887612]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_body")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1666058481]
path_desired_distance = 0.5
target_desired_distance = 1.5
path_postprocessing = 1
avoidance_enabled = true
radius = 0.6
neighbor_distance = 10.0
max_speed = 6.0

[node name="InteractionArea" type="Area3D" parent="." unique_id=1713711942]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea" unique_id=790511631]
shape = SubResource("SphereShape3D_interact")

[node name="DetectionArea" type="Area3D" parent="." unique_id=1338631329]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea" unique_id=2068949147]
shape = SubResource("SphereShape3D_detect")

[node name="Model" type="Node3D" parent="." unique_id=1641959271]

[node name="DebugMesh" type="MeshInstance3D" parent="." unique_id=1598134826]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
material_override = SubResource("StandardMaterial3D_debug")
mesh = SubResource("CapsuleMesh_debug")

[node name="NameLabel" type="Label3D" parent="." unique_id=1316216836]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
billboard = 1
no_depth_test = true
text = "NPC"
font_size = 24

[node name="DriveLabel" type="Label3D" parent="." unique_id=830001400]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 0)
billboard = 1
no_depth_test = true
font_size = 20

[node name="TrajectoryLine" type="MeshInstance3D" parent="." unique_id=709796170]
material_override = SubResource("StandardMaterial3D_tv1nl")
mesh = SubResource("ImmediateMesh_4l61g")
script = ExtResource("2_trajectory")
ribbon_half_width = 0.01
arrow_half_width = 0.1
arrow_length = 0.1
arrow_spacing = 1.0
floor_offset = 0.5
color_rewind = Color(1, 0, 0, 0.6)
preview_length = 3.0
